test_scores/negative_dimers/features/Q66LE6.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q66LE6.pkl.xz